* Fixed : On Edit Page screen, User and Groups searches yielded no results if PP Collaborative Editing extension was inactive * Fixed : On Edit Page screen, User and Groups search UI had results box and search button too narrow * Fixed : Extra gap in Permissions menu when accessing Edit Group/User Permissions screen * Change : If custom fields are not defined for user_meta search, UI provides a maximum of three key/value inputs * Change : User_meta search input box title attribute mentions the PP_USER_SEARCH_META_FIELDS constant (for logged Administrators if "Display hints" and "Advanced" settings are enabled)
git-svn-id: https://plugins.svn.wordpress.org/press-permit-core/trunk@1280032 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/admin/css/pp-item-edit.css
+++ b/admin/css/pp-item-edit.css
@@ -108,7 +108,6 @@ margin-right:15px;
 }
 
 div.pp-user-meta-search {
-w-idth:300px;
 margin-top:2px;
 margin-bottom: 2px;
 }
@@ -117,4 +116,7 @@ vertical-align:middle;
 }
 .pp-agents-selection h4 {
 margin-top: 10px;
+}
+.pp-agents-selection td select {
+width:170px;
 }
